--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-tutor</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-    <button> 13:00</button>
-    <button> 16:00</button>
+    <div class="wrapper">
+    <header class="container">
+        <span class="logo">web-tutor</span>
+        <nav>
+            <ul>
+                <li class="active"> <a href="#">Home</a></li>
+                <li class="btn"><a href="#">Мои записи</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="hero container">
+        <div class="hero--info">
+            <h2>Платформа персонального обучения Web-tutor</h2>
+            <h1>Открывайте новые горизонты знаний с личным наставником!</h1>
+            <p>Мы объединили экспертов по 15+ направлениям: от школьной математики и
+                 подготовки к экзаменам до иностранных языков и программирования. 
+                 Начните свой путь к цели, выбрав идеального репетитора прямо сейчас.</p>
+        </div>
+        <img src="img/learning.png" alt="learning">
+    </div>
+    </div>
 </body>
+
 </html>
