--- a/index.html
+++ b/index.html
@@ -30,6 +30,130 @@
         <img src="img/learning.png" alt="learning">
     </div>
     </div>
+
+    <section class="tutors">
+        <div class="container">
+            <h2>Выберете своего репетитора:</h2>
+            <div class="btn--subjects">
+                <button class="btn active" data-filter="all">все</button>
+                <button class="btn" data-filter="english">Английский язык</button>
+                <button class="btn" data-filter="mathematics">Математика</button>
+                <button class="btn" data-filter="russian">Русский язык</button>
+                <button class="btn" data-filter="physics">Физика</button>
+            </div>
+
+            <div class="tutors-slider">
+                <button class="slider-btn prev">←</button>
+
+            <div class="grid-tutors">
+
+                <article class="tutor-card" data-subject="mathematics">
+                    <div class="tutor-img">
+                        <img src="img/tutor1.png" alt="Иванова Светалана">
+                    </div>
+                    <div class="tutor-info">
+                        <h3>Иванова Светалана</h3>
+                        <div class="tutor-rating">
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-non_active">☆</span>
+                            <span class="rating-num">4.8</span>
+                        </div>
+                        <p class="tutor-exp">Опыт:5 лет</p>
+                        <p class="tutor-price">1200 ₽/час</p>
+                        <button class="btn-sign_up">Записаться</button>
+                    </div>
+                </article>
+
+                <article class="tutor-card" data-subject="english">
+                    <div class="tutor-img">
+                        <img src="img/tutor2.png" alt="Алексеев Роман">
+                    </div>
+                    <div class="tutor-info">
+                        <h3>Алексеев Роман</h3>
+                        <div class="tutor-rating">
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-non_active">☆</span>
+                            <span class="rating-num">4.9</span>
+                        </div>
+                        <p class="tutor-exp">Опыт:7 лет</p>
+                        <p class="tutor-price">1500 ₽/час</p>
+                        <button class="btn-sign_up">Записаться</button>
+                    </div>
+                </article>
+
+                <article class="tutor-card" data-subject="physics">
+                    <div class="tutor-img">
+                        <img src="img/tutor3.png" alt="Картошкин Николай">
+                    </div>
+                    <div class="tutor-info">
+                        <h3>Картошкин Николай</h3>
+                        <div class="tutor-rating">
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="rating-num">5</span>
+                        </div>
+                        <p class="tutor-exp">Опыт:12 лет</p>
+                        <p class="tutor-price">2200 ₽/час</p>
+                        <button class="btn-sign_up">Записаться</button>
+                    </div>
+                </article>
+
+                <article class="tutor-card" data-subject="physics">
+                    <div class="tutor-img">
+                        <img src="img/tutor4.png" alt="Валерьев Антон">
+                    </div>
+                    <div class="tutor-info">
+                        <h3>Валерьев Антон</h3>
+                        <div class="tutor-rating">
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">☆</span>
+                            <span class="rating-num">4.6</span>
+                        </div>
+                        <p class="tutor-exp">Опыт:2 года</p>
+                        <p class="tutor-price">1300 ₽/час</p>
+                        <button class="btn-sign_up">Записаться</button>
+                    </div>
+                </article>
+
+                <article class="tutor-card" data-subject="russian">
+                    <div class="tutor-img">
+                        <img src="img/tutor5.png" alt="Филиппова Мария">
+                    </div>
+                    <div class="tutor-info">
+                        <h3>Филиппова Мария</h3>
+                        <div class="tutor-rating">
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">★</span>
+                            <span class="stars-active">☆</span>
+                            <span class="rating-num">4.8</span>
+                        </div>
+                        <p class="tutor-exp">Опыт:5 лет</p>
+                        <p class="tutor-price">1700 ₽/час</p>
+                        <button class="btn-sign_up">Записаться</button>
+                    </div>
+                </article>
+                
+            </div>  
+
+            <button class="slider-btn next">→</button> 
+            </div>  
+        </div>
+    </section>
+
 </body>
 
 </html>
