section tutors+footer

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </div>
         <img src="img/learning.png" alt="learning">
     </div>
-    </div>
 
+    <div class="frame">
     <section class="tutors">
         <div class="container">
-            <h2>Выберете своего репетитора:</h2>
+            <h2>Выбирете своего репетитора:</h2>
             <div class="btn--subjects">
                 <button class="btn active" data-filter="all">все</button>
                 <button class="btn" data-filter="english">Английский язык</button>
@@ -58,7 +58,7 @@
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
-                            <span class="stars-non_active">☆</span>
+                            <span class="stars-non_active">★</span>
                             <span class="rating-num">4.8</span>
                         </div>
                         <p class="tutor-exp">Опыт:5 лет</p>
@@ -78,7 +78,7 @@
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
-                            <span class="stars-non_active">☆</span>
+                            <span class="stars-non_active">★</span>
                             <span class="rating-num">4.9</span>
                         </div>
                         <p class="tutor-exp">Опыт:7 лет</p>
@@ -118,7 +118,7 @@
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
-                            <span class="stars-active">☆</span>
+                            <span class="stars-active">★</span>
                             <span class="rating-num">4.6</span>
                         </div>
                         <p class="tutor-exp">Опыт:2 года</p>
@@ -138,7 +138,7 @@
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
                             <span class="stars-active">★</span>
-                            <span class="stars-active">☆</span>
+                            <span class="stars-active">★</span>
                             <span class="rating-num">4.8</span>
                         </div>
                         <p class="tutor-exp">Опыт:5 лет</p>
@@ -152,8 +152,22 @@
             <button class="slider-btn next">→</button> 
             </div>  
         </div>
+        </div>
     </section>
 
+    <footer class="container">
+    <div class="footer-content">
+        <span class="logo">web-tutor</span>
+        <p>©2026. Твой путь к знаниям.</p>
+        <div class="socials">
+            <a href="#">TG</a>
+            <a href="#">VK</a>
+        </div>
+    </div>
+    </footer>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
