footer+ tutors cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="frame">
     <section class="tutors">
         <div class="container">
-            <h2>Выбирете своего репетитора:</h2>
+            <h2>Выберите своего репетитора:</h2>
             <div class="btn--subjects">
                 <button class="btn active" data-filter="all">все</button>
                 <button class="btn" data-filter="english">Английский язык</button>
@@ -49,7 +49,7 @@
 
                 <article class="tutor-card" data-subject="mathematics">
                     <div class="tutor-img">
-                        <img src="img/tutor1.png" alt="Иванова Светалана">
+                        <img src="img/female-photo.png" alt="Иванова Светалана">
                     </div>
                     <div class="tutor-info">
                         <h3>Иванова Светалана</h3>
@@ -69,7 +69,7 @@
 
                 <article class="tutor-card" data-subject="english">
                     <div class="tutor-img">
-                        <img src="img/tutor2.png" alt="Алексеев Роман">
+                        <img src="img/male-photo.png" alt="Алексеев Роман">
                     </div>
                     <div class="tutor-info">
                         <h3>Алексеев Роман</h3>
@@ -89,7 +89,7 @@
 
                 <article class="tutor-card" data-subject="physics">
                     <div class="tutor-img">
-                        <img src="img/tutor3.png" alt="Картошкин Николай">
+                        <img src="img/male-photo.png" alt="Картошкин Николай">
                     </div>
                     <div class="tutor-info">
                         <h3>Картошкин Николай</h3>
@@ -109,7 +109,7 @@
 
                 <article class="tutor-card" data-subject="physics">
                     <div class="tutor-img">
-                        <img src="img/tutor4.png" alt="Валерьев Антон">
+                        <img src="img/male-photo.png" alt="Валерьев Антон">
                     </div>
                     <div class="tutor-info">
                         <h3>Валерьев Антон</h3>
@@ -129,7 +129,7 @@
 
                 <article class="tutor-card" data-subject="russian">
                     <div class="tutor-img">
-                        <img src="img/tutor5.png" alt="Филиппова Мария">
+                        <img src="img/female-photo.png" alt="Филиппова Мария">
                     </div>
                     <div class="tutor-info">
                         <h3>Филиппова Мария</h3>
