--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li class="active"> <a href="#">Home</a></li>
-                <li class="btn"><a href="#">Мои записи</a></li>
+                <li class="btn"><a href="records.html">Мои записи</a></li>
             </ul>
         </nav>
     </header>
