fix mobile styles & add comments

--- a/records.html
+++ b/records.html
@@ -25,9 +25,9 @@
         <div class="records-frame container">
             <div id="bookings-list" class="bookings-list">
                 </div>
-            <p id="no-records" class="empty-msg">Записей пока нет. Само время выбирать!</p>
+            <p id="no-records" class="empty-msg">Записей пока нет. Самое время выбирать!</p>
         </div>
-        
+
     <footer class="container">
     <div class="footer-content">
         <span class="logo">web-tutor</span>
